information for p to h3 tag

--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
     <div class="jumbotron">
       <h1 class="display-4">Activity Carousel</h1>
       <hr class="my-4">
-      <p>Click on a book for more details.</p>
+      <p>Click on a Picture for more details.</p>
     </div>
     <div class="row">
       <div class="col-md-6" id="activities">
 
       </div>
       <div class="col-md-6">
-        <p id="information"></p>
+        <h3 id="information"></h3>
       </div>
 
     </div>
